# Leadify

./: .env.example  .gitignore  Außendienst.py  IMPLEMENTATION_SUMMARY.md  QUICKSTART_API.md  README.md  README_API.md  admin_menu.py  aussendienst_view.py  auswertung.py  auth_manager.py  benutzerfreigabe.py  database.py  db_config_example.env  lead_bearbeitung.py  lead_loeschen.py  lead_status.py  leadify_main (1).sql  leadify_main.sql  main.py  pyproject.toml  registrierung.py  requirements-api.txt  start_api.bat  test_api.py
.github/workflows/: deploy.yml
api/: __init__.py  api_client.py  api_main.py  api_routes.py  config.py  database.py  dependencies.py  main.py  models.py  routes.py
backend/: Außendienst.py  admin_menu_manager.py  auswertung_manager.py  auth_manager.py  benutzerfreigabe_manager.py  database.py  lead_bearbeitung_manager.py  lead_loeschen_manager.py  lead_status_manager.py
frontend/: admin_menu_view.py  aussendienst_view.py  auswertung.py  benutzerfreigabe_view.py  lead_bearbeitung_view.py  lead_loeschen_view.py  lead_status_view.py
